Objects/complexobject.c
@@ -800,7 +800,7 @@ static PyObject *
 complex_int(PyObject *v)
 {
 	PyErr_SetString(PyExc_TypeError,
-		   "can't convert complex to int; use int(abs(z))");
+		   "can't convert complex to int");
 	return NULL;
 }
 
@@ -808,7 +808,7 @@ static PyObject *
 complex_long(PyObject *v)
 {
 	PyErr_SetString(PyExc_TypeError,
-		   "can't convert complex to long; use long(abs(z))");
+		   "can't convert complex to long");
 	return NULL;
 }
 
@@ -816,7 +816,7 @@ static PyObject *
 complex_float(PyObject *v)
 {
 	PyErr_SetString(PyExc_TypeError,
-		   "can't convert complex to float; use abs(z)");
+		   "can't convert complex to float");
 	return NULL;
 }
 
